@@ -14,6 +14,11 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  
 
+if [target_info exists gdb,nosignals] {
+    verbose "Skipping relativedebug.exp because of nosignals."
+    continue
+}
+
 if $tracelevel then {
     strace $tracelevel
 }
